# Transformer_hackathon

./: .gitignore  README.md  __init__.py  cloud_env.py  inference.py  models.py  openenv.yaml  requirements.txt  train.py  validate-submission.sh
cloud_resource_env/: Dockerfile  __init__.py  client.py  openenv.yaml  pyproject.toml
cloud_resource_env/server/: __init__.py
server/: app.py  cloud_environment.py
